--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: Notes on Studying Abroad for LGBT+ Students
+logo: 
+description: Open Information for LGBT+ Travel
+show_downloads: 
+google_analytics:
 theme: jekyll-theme-minimal
